Updated the Spanish translation.

--- a/po/wesnoth-help/es.po
+++ b/po/wesnoth-help/es.po
@@ -23,8 +23,8 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:45+0100\n"
-"PO-Revision-Date: 2012-01-20 21:20-0500\n"
-"Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
+"PO-Revision-Date: 2012-01-21 10:58-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -5049,7 +5049,7 @@ msgstr "Draco"
 #. [race]: id=drake
 #: data/core/units.cfg:55
 msgid "race+female^Drake"
-msgstr "Draco hembra"
+msgstr "Draconesa"
 
 #. [race]: id=drake
 #: data/core/units.cfg:56
@@ -5784,7 +5784,7 @@ msgstr "Orco"
 #. [race]: id=orc
 #: data/core/units.cfg:253
 msgid "race+female^Orc"
-msgstr "Mujer orco"
+msgstr "Orca"
 
 #. [race]: id=orc
 #: data/core/units.cfg:254
