Updated the Old English translation.

--- a/po/wesnoth/ang.po
+++ b/po/wesnoth/ang.po
@@ -2,13 +2,14 @@
 # Copyright (C) 2011 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
-# Steven Panek <Majora700@gmail.com>, 2011
+# Steven Panek <Majora700@gmail.com>, 2011-2012
+# Eirik Westcoat <eirikvw@aim.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-19 15:53-0500\n"
+"PO-Revision-Date: 2012-01-21 16:22-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -859,14 +860,12 @@ msgid ""
 msgstr ""
 
 #: data/core/macros/items.cfg:268
-#, fuzzy
 msgid "holy water^Take it"
-msgstr "ᚾᛁᛗᚪᚾ ᚻᛁᚾᛖ"
+msgstr "ᚻᛁᛏ ᚾᛁᛗᚪᚾ"
 
 #: data/core/macros/items.cfg:269
-#, fuzzy
 msgid "holy water^Leave it"
-msgstr "ᛚᚫᚠᚪᚾ ᚻᛁᚾᛖ"
+msgstr "ᚻᛁᛏ ᛚᚫᚠᚪᚾ"
 
 #: data/core/macros/items.cfg:270
 msgid "I am not suited to the use of this item! Let another take it."
@@ -1797,7 +1796,7 @@ msgstr ""
 #. [language]
 #: data/english.cfg:47
 msgid "blade"
-msgstr ""
+msgstr "ᛖᚳᚷ"
 
 #. [language]
 #: data/english.cfg:48
@@ -5801,23 +5800,3 @@ msgstr ""
 
 #~ msgid "Lord"
 #~ msgstr "ᚻᛚᚪᚠᚩᚱᛞ"
-
-#, fuzzy
-#~| msgid "Hard"
-#~ msgid "(Hard)"
-#~ msgstr "(ᚻᛠᚱᛞ)"
-
-#~ msgid "High Lord"
-#~ msgstr "ᚻᛠᚻ ᚻᛚᚪᚠᚩᚱᛞ"
-
-#~ msgid "Enemies"
-#~ msgstr "ᚷᛖᚹᛁᚾᚾᚪᚾ"
-
-#~ msgid "B"
-#~ msgstr "ᛒ"
-
-#~ msgid "MB"
-#~ msgstr "ᛗᛒ"
-
-#~ msgid "GB"
-#~ msgstr "ᚷᛒ"
