--- a/po/wesnoth-manpages/ang.po
+++ b/po/wesnoth-manpages/ang.po
@@ -2,13 +2,13 @@
 # Copyright (C) 2011 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
-# Steven Panek <Majora700@gmail.com>, 2011
+# Steven Panek <Majora700@gmail.com>, 2011-2012
 msgid ""
 msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2012-01-19 15:01-0500\n"
+"PO-Revision-Date: 2012-01-20 20:14-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -783,8 +783,8 @@ msgid ""
 "B<wesnothd> [\\|B<-dv>\\|] [\\|B<-c> I<path>\\|] [\\|B<-p> I<port>\\|] [\\|"
 "B<-t> I<number>\\|] [\\|B<-T> I<number>\\|]"
 msgstr ""
-"ᛒ<wesnothd> [\\|ᛒ<-dv>\\|] [\\|ᛒ<-c> ᛁ<pæþ>\\|] [\\|ᛒ<-p> ᛁ<port>\\|] [\\|ᛒ<-"
-"t> ᛁ<rim>\\|] [\\|ᛒ<-T> ᛁ<rim>\\|]"
+"B<wesnothd> [\\|B<-dv>\\|] [\\|B<-c> ᛁ<pæþ>\\|] [\\|B<-p> ᛁ<port>\\|] [\\|B<-"
+"t> ᛁ<rim>\\|] [\\|B<-T> ᛁ<rim>\\|]"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:39
