Updated the Finnish translation.

--- a/po/wesnoth-help/fi.po
+++ b/po/wesnoth-help/fi.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-16 13:47+0200\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-21 23:23+0200\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
 "Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: fi\n"
@@ -242,7 +242,7 @@ msgid ""
 "The great continent to the east of <ref>dst='morogor' text='Morogor'</ref>. "
 "Its existence is unknown to the drakes until the flight of Galun."
 msgstr ""
-"Suurmanner sijaitsee <ref>dst='morogor' text='Morogorista'</ref> itään. Sen "
+"Uusi Manner sijaitsee <ref>dst='morogor' text='Morogorista'</ref> itään. Sen "
 "olemassaoloa ei tiedetty ennen Galunin parvea."
 
 #. [topic]: id=abyss
@@ -5800,7 +5800,7 @@ msgstr "Susi"
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:311
 msgid "race+female^Wolf"
-msgstr "Haltia"
+msgstr "Susi"
 
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:312
