--- a/po/wesnoth-units/fi.po
+++ b/po/wesnoth-units/fi.po
@@ -10,10 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-units-fi\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-15 16:03+0200\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-18 00:29+0200\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
-"Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
+"Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,10 +80,10 @@ msgid ""
 "terrain or underground. Their power and endurance more than compensate for "
 "their relatively poor mobility."
 msgstr ""
-"Kääpiösoturit käyttävät mahtavia sotakirveitä ja -vasaroita. Tämä tekee "
-"heistä pelättyjä vihollisia lähitaistelussa. He ovat hyviä liikkumaan maan "
-"alla ja vuorilla. He ovat hitaita, mutta heidän voimansa ja kestonsa "
-"tasapainottavat sen."
+"Kääpiösoturit käyttävät mahtavia sotakirveitä ja -vasaroita. Se tekee heistä "
+"pelättyjä vihollisia lähitaistelussa. He ovat hyviä liikkumaan maan alla ja "
+"vuorilla. He ovat hitaita, mutta heidän voimansa ja kestonsa tasapainottavat "
+"sen."
 
 #. [attack]: type=blade
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Fighter.cfg:34
@@ -127,11 +127,10 @@ msgid ""
 "it. As the line marches forward, they act to secure its hard-won advance."
 msgstr ""
 "Kääpiöiden rotu on aina ollut kuuluisa vantteran rakenteensa vuoksi ja monet "
-"heidän sotureistaan varustavat itsensä ottaakseen tästä hyödyn. "
-"Kääpiövartijat marssivat taisteluun tornikilpien ja keihäiden kanssa. "
-"Useimmiten heidän roolinsa on pitää linja ja ottaa raskas hinta niiltä, "
-"jotka yrittävät sen murtaa. Linjan marssiessa eteenpäin he varmistavat "
-"edistymisen."
+"heidän sotureistaan hyödyntävät sitä oikeilla varustuksilla. Kääpiövartijat "
+"marssivat tornikilvin ja keihäin kanssa kohti taistelua. Useimmiten he "
+"pyrkivät pitämään linjat ja verottamaan niitä, jotka yrittävät murtautua "
+"läpi. He varmistavat linjan etenemisen."
 
 #. [attack]: type=pierce
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Guardsman.cfg:30
@@ -205,11 +204,9 @@ msgid ""
 "can hold a patch of earth with the singleminded tenacity of an oak."
 msgstr ""
 "Järkkymättömät kääpiöt, kääpiöiden joukkojen mestarit, muodostavat "
-"taistelulinjojen muurin. Johtaminen suoraan hyökkäykseen heidän linjaansa "
-"vastaan on usein poissuljettu vaihtoehto – se kun tuppaa muodostumaan "
-"itsemurhaksi. Nämä kääpiöt ovat lähitaistelun mestareita, ja he voivat "
-"pysytellä tietyllä maanpalasella samankaltaisella jääräpäisellä sitkeydellä "
-"kuin tammi."
+"taistelulinjojen muurin. Suora hyökkäys heidän linjaansa kohti on usein "
+"itsemurhaa. Nämä kääpiöt ovat lähitaistelun mestareita ja he voivat pitää "
+"maastonkohtaa hallussaan yhtä jääräpäisesti kuin vanha tammi."
 
 #. [unit_type]: id=Dwarvish Stalwart, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Stalwart, race=dwarf
@@ -467,7 +464,7 @@ msgid ""
 "raw heft the massive metal head provides. The thick plate these drakes wear "
 "protects them well against weapons that could slip between their scales."
 msgstr ""
-"Draakkittuomarit ottavat lainvalvonnan tehtävänsä hyvin vakavasti. He ovat "
+"Draakkituomarit ottavat lainvalvonnan tehtävänsä hyvin vakavasti. He ovat "
 "hylänneet kyntensä ja vaihtaneet keihäät ja miekat hilpareihin, ajatellen, "
 "että liikkuvuuden menetys massiivisen terän  raa'asta voimasta on reilu "
 "hinta maksettavaksi. Heidän käyttämä tiivis levyhaarniska suojaa heitä hyvin "
@@ -978,8 +975,8 @@ msgid ""
 "having practiced this skill hunting in the mountains. Their maneuverability "
 "makes them dangerous and tricky foes."
 msgstr ""
-"Kääpiötutkijat ovat ainutlaatuisia selviytyjiä. He voivat samota kuukausia "
-"metsissä ja vuorilla etsien uusia malmi- ja mineraaliesiintymiä, "
+"Kääpiötutkimusmatkailijat ovat ainutlaatuisia selviytyjiä. He voivat samota "
+"kuukausia metsissä ja vuorilla etsien uusia malmi- ja mineraaliesiintymiä, "
 "varustautuen ainoastaan helposti kannettavilla varusteilla. Vaikka heidän "
 "lähitaistelutaitonsa ovat muihin kääpiöihin verrattuna heikompia, "
 "kirveenheitossa he ovat vertaansa vailla. Ovathan he harjoitelleet "
