--- a/po/wesnoth-manual/fi.po
+++ b/po/wesnoth-manual/fi.po
@@ -8,10 +8,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
-"POT-Creation-Date: 2012-01-08 18:11+0100\n"
-"PO-Revision-Date: 2012-01-14 20:16+0200\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-21 23:20+0200\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
-"Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
+"Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -268,7 +268,7 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/main-menu-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/main-menu-1.5.11.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/main-menu-1.9.4.jpg\"/> </"
 "imageobject>"
 
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject><textobject><phrase>
