--- a/po/wesnoth/fi.po
+++ b/po/wesnoth/fi.po
@@ -9,11 +9,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-14 17:16+0200\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-20 23:30+0200\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
-"Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
-"Language: fi\n"
+"Language-Team: American English <kde-i18n-doc@kde.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -274,7 +274,7 @@ msgstr "Ohjelmointi"
 #. [about]
 #: data/core/about.cfg:232
 msgid "General Purpose Administration and Coordination"
-msgstr "Yleinen tarkoitus, ylläpito ja koordinaatio"
+msgstr "Yleinen ylläpito ja koordinaatio"
 
 #. [about]
 #: data/core/about.cfg:254
@@ -585,7 +585,7 @@ msgstr "Botit"
 #: data/core/macros/ai.cfg:523
 msgid "Ask $ally_leader.name (leader of side $ally_leader.side) to move here"
 msgstr ""
-"Kysy yksikköä $ally_leader.name (puolen $ally_leader.side johtaja) "
+"Pyydä yksikköä $ally_leader.name (puolen $ally_leader.side johtaja) "
 "liikkumaan tänne"
 
 #. [note]
@@ -810,7 +810,7 @@ msgstr ""
 #: data/core/macros/items.cfg:23
 msgid "You have come across a wishing well. What would you like to wish for?"
 msgstr ""
-"poSaavut toivomuskaivolle.\n"
+"Saavut toivomuskaivolle.\n"
 "Mitä toivot?"
 
 #. [option]: speaker=narrator
@@ -4967,7 +4967,7 @@ msgstr "Kytke x,y-koordinaattien näyttö heksoissa."
 
 #: src/menu_events.cpp:2629
 msgid "Toggle overlaying of terrain codes on hexes."
-msgstr "Kytke terrainkoodien näyttö heksoissa"
+msgstr "Kytke maastokoodien näyttö heksoissa"
 
 #: src/menu_events.cpp:2632
 msgid "Toggle planning mode."
@@ -5008,7 +5008,7 @@ msgstr "(tyhjä)"
 
 #: src/menu_events.cpp:2870 src/menu_events.cpp:2876 src/menu_events.cpp:2926
 msgid "ignores list"
-msgstr "ignoroitujen lista"
+msgstr "estettyjen lista"
 
 #: src/menu_events.cpp:2876
 msgid "Added to ignore list: $nick"
@@ -5840,7 +5840,7 @@ msgstr "Tuntematon skenaario: '$scenario|'"
 
 #: src/playmp_controller.cpp:92
 msgid "$name has taken control"
-msgstr "$name on ottanut kontrollin"
+msgstr "$name on ottanut hallinnan"
 
 #: src/playmp_controller.cpp:94
 msgid "Turn changed"
@@ -6520,7 +6520,7 @@ msgstr "lainkuuliainen"
 
 #: src/unit_types.cpp:976
 msgid "liminal"
-msgstr "viihtyy hämärässä"
+msgstr "liminaali"
 
 #: src/unit_types.cpp:976
 msgid "neutral"
@@ -6536,7 +6536,7 @@ msgstr "lainkuuliainen"
 
 #: src/unit_types.cpp:977
 msgid "female^liminal"
-msgstr "viihtyy hämärässä"
+msgstr "liminaali"
 
 #: src/unit_types.cpp:977
 msgid "female^neutral"
