--- a/po/wesnoth-multiplayer/fi.po
+++ b/po/wesnoth-multiplayer/fi.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2012-01-21 01:45+0100\n"
 "PO-Revision-Date: 2012-01-15 22:03+0200\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
-"Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
+"Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
