--- a/po/wesnoth/fi.po
+++ b/po/wesnoth/fi.po
@@ -12,8 +12,8 @@ msgstr ""
 "POT-Creation-Date: 2012-01-21 01:45+0100\n"
 "PO-Revision-Date: 2012-01-20 23:30+0200\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
-"Language-Team: American English <kde-i18n-doc@kde.org>\n"
-"Language: \n"
+"Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
